Fix card spacing

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,6 +1,4 @@
 .ProjectsCard {
-  width: 15rem;
-  min-height: 17rem;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
